<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rategolondon"
        android:padding="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/victoria"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rateme"
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/colorAccent"
            android:id="@+id/later"
            android:text="@string/later"
            android:layout_weight="2"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:id="@+id/noThanks"
            android:textColor="@color/colorAccent"
            android:text="@string/nothanks"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:id="@+id/rateNow"
            android:textColor="@color/colorAccent"
            android:text="@string/ratenow"
            android:layout_weight="1"/>


    </LinearLayout>

</LinearLayout>