<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollView"
    android:background="@drawable/green_yellow_gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rootLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_station"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="6dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:visibility="gone"
            android:id="@+id/home_no_station_info"
            android:text="@string/no_station_info"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/home_cardView"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@color/cardViewBG"
                app:cardCornerRadius="8dp"
                >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        android:id="@+id/radioButton_home"
                        android:visibility="gone"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:padding="16dp"
                        android:textColor="@color/colorTextPrimary"
                        android:id="@+id/homeStationName"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp"
                        android:layout_below="@id/homeStationName"
                        android:id="@+id/home_station_linearLayout"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_station"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:visibility="gone"
            android:layout_gravity="center"
            android:id="@+id/work_no_station_info"
            android:text="@string/no_station_info"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/work_cardView"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/cardViewBG"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:id="@+id/radioButton_work"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:textStyle="bold"
                    android:padding="16dp"
                    android:textSize="15sp"
                    android:id="@+id/workStationName" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:layout_below="@id/workStationName"
                    android:id="@+id/work_station_linearLayout"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:visibility="gone"
            android:id="@+id/favorites_no_station_info"
            android:layout_gravity="center"
            android:text="@string/no_station_info"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="40dp"
            android:id="@+id/favorites_linearlayout"
            />

    </LinearLayout>

</ScrollView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_fab"
        android:id="@+id/add_fab"
        app:layout_anchor="@id/rootLayout"
        android:contentDescription="@string/close_desc"
        app:layout_anchorGravity="end|bottom"
        android:foreground="@drawable/add_fab_ripple_effect"
        android:layout_margin="10dp"/>
</android.support.design.widget.CoordinatorLayout>
