<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative_layout"
    android:background="@color/cardViewBG"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/services_btn"
            android:layout_alignTop="@id/map"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/services"
                android:textColor="#14497D"
                android:paddingRight="4dp"
                android:paddingEnd="4dp"
                android:text="@string/services"/>

            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/arrow"
                android:paddingRight="2dp"
                android:src="@drawable/arrow_right_purple"
                />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/services_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="6dp"
        android:id="@+id/servicesLinearLayout">
    </LinearLayout>


    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/map"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:id="@+id/progressBar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bakerloo"
        android:layout_above="@+id/line_fragment"
        android:id="@+id/view"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/line_fragment" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/streetView_fragment"
        android:layout_above="@+id/progressBar"
        android:layout_toRightOf="@+id/close_id"
        android:layout_toEndOf="@+id/close_id"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/close_fab"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:contentDescription="@string/close_desc"
        android:id="@+id/close_id"/>


</RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:id="@+id/bottomSheet"
        android:background="@color/colorPrimary"
        android:layout_alignBottom="@id/map">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lineName_layout"
            android:paddingBottom="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/line_details"
                android:id="@+id/lineDetailsTV"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
